--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,12 +16,13 @@
         android:id="@+id/new_thread_maker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:hint="enter Thread name"
+        android:text=""
         />
     <ListView
         android:id="@+id/results_list_view"
         android:layout_below="@+id/new_thread_maker"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
