--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,20 +4,21 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="button_trans">#66FFFFFF</color>
-    <color name="Color_1">#ff0099cc</color>
-    <color name="Color_2">#ff9933cc</color>
-    <color name="Color_3">#ff669900</color>
-    <color name="Color_4">#ffff8a00</color>
-    <color name="Color_5">#ffcc0000</color>
-    <color name="Color_6">#ffff0000</color>
-    <color name="Color_7">#ffff8000</color>
-    <color name="Color_8">#ffffff00</color>
-    <color name="Color_9">#ff80ff00</color>
-    <color name="Color_10">#ff00ffff</color>
-    <color name="Color_11">#ffFF4081</color>
-    <color name="Color_12">#ff0000ff</color>
-    <color name="Color_13">#ffbf00ff</color>
-    <color name="Color_14">#ffff00bf</color>
-    <color name="Color_15">#ffff0040</color>
-    <color name="Color_0">#ff848484</color>
+    <color name="Color_1">#660099cc</color>
+    <color name="Color_2">#669933cc</color>
+    <color name="Color_3">#66669900</color>
+    <color name="Color_4">#66ff8a00</color>
+    <color name="Color_5">#66cc0000</color>
+    <color name="Color_6">#66ff0000</color>
+    <color name="Color_7">#66ff8000</color>
+    <color name="Color_8">#66ffff00</color>
+    <color name="Color_9">#6680ff00</color>
+    <color name="Color_10">#6600ffff</color>
+    <color name="Color_11">#66FF4081</color>
+    <color name="Color_12">#660000ff</color>
+    <color name="Color_13">#66bf00ff</color>
+    <color name="Color_14">#66ff00bf</color>
+    <color name="Color_15">#66ff0040</color>
+    <color name="Color_0">#66848484</color>
+    <color name="Color_ZeroAlpha">#00ffffff</color>
 </resources>
