--- a/app/src/main/res/layout/results_list.xml
+++ b/app/src/main/res/layout/results_list.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/asset_thumbnail"
-        android:src="@drawable/stump"
+        android:src="@drawable/mine1"
         android:scaleType="centerCrop"
         />
     <RatingBar
