--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -16,11 +16,13 @@
     android:layout_weight="2"
     ></HorizontalScrollView>
 
-    <TextView
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="map"
-        android:gravity="center"/>
+        android:layout_height="match_parent"
+        tools:context="com.example.petermartinez.tapecitry.ViewActivity" />
 
 </LinearLayout>
