--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -4,25 +4,27 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/view_text_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:text="camera"
+        android:textSize="32sp"
         android:gravity="center"/>
 
-<HorizontalScrollView
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="2"
-    ></HorizontalScrollView>
+    <ListView
+        android:id="@+id/assets_list_view"
+        android:layout_below="@id/view_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="4"/>
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_weight="2"
+        android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.example.petermartinez.tapecitry.ViewActivity" />
+        android:layout_height="0dp"
+        />
 
 </LinearLayout>
