--- a/app/src/main/res/layout/results_list.xml
+++ b/app/src/main/res/layout/results_list.xml
@@ -17,7 +17,6 @@
         android:layout_height="match_parent"
         android:id="@+id/asset_thumbnail"
         android:src="@android:drawable/ic_dialog_alert"
-
         />
         <!--android:scaleType="centerCrop"-->
     <RatingBar
@@ -97,14 +96,14 @@
         android:text=".6 mi"
         android:textSize="20sp"
         android:id="@+id/distance"/>
-    <TextView
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight ="1"
         android:gravity="center"
         android:textSize="16sp"
         android:id="@+id/compass"
-        android:text="N"/>
+        android:src="@drawable/bearing_arrow"/>
 </LinearLayout>
 
 
