--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -7,18 +7,37 @@
         android:id="@+id/view_text_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight=".7"
         android:text="camera"
         android:textSize="32sp"
         android:maxLines="1"
         android:gravity="center"/>
+
+    <RatingBar
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight=".4"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/my_rating"
+        android:numStars="5"
+    android:stepSize="1"
+    android:rating="0.0"
+        style="?android:attr/ratingBarStyleSmall"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight=".4"
+        android:layout_gravity="center_horizontal"
+        android:text="save rating"
+        android:textSize="8sp"
+        android:id="@+id/rating_confirm"/>
 
     <ListView
         android:id="@+id/assets_list_view"
         android:layout_below="@id/view_text_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="3.5"
         android:dividerHeight="2.0sp"/>
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
